WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221686
[GPUP] Some media-source tests fail/timeout when media in GPU Process is enabled
https://bugs.webkit.org/show_bug.cgi?id=221686
Summary
[GPUP] Some media-source tests fail/timeout when media in GPU Process is enabled
Peng Liu
Reported
2021-02-10 10:13:20 PST
imported/w3c/web-platform-tests/media-source/mediasource-buffered.html imported/w3c/web-platform-tests/media-source/mediasource-changetype.html imported/w3c/web-platform-tests/media-source/mediasource-duration-boundaryconditions.html imported/w3c/web-platform-tests/media-source/mediasource-remove.html media/media-source/media-source-resize.html platform/mac/media/media-source/videoplaybackquality-decompressionsession.html
Attachments
Patch
(5.69 KB, patch)
2021-03-16 15:35 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Patch
(8.10 KB, patch)
2021-03-16 21:44 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Patch
(8.02 KB, patch)
2021-03-16 22:44 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Fix two test failures
(5.46 KB, patch)
2021-03-17 11:10 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-17 10:14:26 PST
<
rdar://problem/74438852
>
Peng Liu
Comment 2
2021-03-16 15:35:52 PDT
Created
attachment 423405
[details]
Patch
Peng Liu
Comment 3
2021-03-16 18:27:15 PDT
Test platform/mac/media/media-source/videoplaybackquality-decompressionsession.html is tracked in
bug 223294
.
Peng Liu
Comment 4
2021-03-16 21:44:15 PDT
Created
attachment 423431
[details]
Patch
Peng Liu
Comment 5
2021-03-16 22:44:18 PDT
Created
attachment 423437
[details]
Patch
EWS
Comment 6
2021-03-17 09:58:30 PDT
commit-queue failed to commit
attachment 423437
[details]
to WebKit repository. To retry, please set cq+ flag again.
Peng Liu
Comment 7
2021-03-17 10:06:16 PDT
Comment on
attachment 423437
[details]
Patch Clearing flags on attachment: 423437 Committed
r274563
(
235408@main
): <
https://commits.webkit.org/235408@main
>
Peng Liu
Comment 8
2021-03-17 11:10:10 PDT
Created
attachment 423504
[details]
Fix two test failures
EWS
Comment 9
2021-03-17 14:25:46 PDT
Committed
r274591
: <
https://commits.webkit.org/r274591
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423504
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug